MDEV-8821: Failing assertion: !page || page_type != 0 in file log0recv. cc line 1404

Alloc creating crypt_data to empty page at crash recovery and redo.